--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 />
     <link rel="stylesheet" href="style.css" />
-    <title>Reddit Pics</title>
+    <title >Reddit Pics </title>
   </head>
 
   <body>
     <nav class="navbar navbar-dark bg-primary mb-3">
       <div class="container">
-        <span class="navbar-brand"> Reddit Pics</span>
+    <!--  <span class="navbar-brand" > <i class="fa-solid fa-reddit"></i></span>-->
+        <span class="navbar-brand"  style="color:red;"  font-weight:bold”>  Reddit r/Pics</span>
       </div>
     </nav>
     <div id="search-container" class="container">
